# SMART-PROCUREMENT-AGENT

./: .gitignore  README.md  docker-compose.yaml  requirements.txt
agent/: .env.example  Dockerfile  main.py  prompt.py  requirements.txt  test.py  web_app.py
fx-rates-mcp/: .env.example  Dockerfile  env_options.json  mcp-server-catalog.yaml  mcp_instance.py  mcp_tools.json  metrics.py  server.py
fx-rates-mcp/tools/: convert_amount.py  get_exchange_rate.py  models.py  utils.py
notification-mcp/: .env.example  Dockerfile  env_options.json  mcp-server-catalog.yaml  mcp_instance.py  mcp_tools.json  metrics.py  pyproject.toml  server.py
notification-mcp/tools/: models.py  send_procurement_plan_webhook.py  utils.py
scripts/: debug_search_printful_mcp.py
supplier-pricing-mcp/: .env.example  Dockerfile  env_options.json  mcp-server-catalog.yaml  mcp_instance.py  mcp_tools.json  metrics.py  requirements.txt  server.py
supplier-pricing-mcp/tools/: get_offers_for_items.py  models.py  printful_client.py  search_printful_catalog.py  search_products.py  utils.py
